--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,3 +5,11 @@
     install_options: "{{ item.install_options | default(omit) }}"
     state: "{{ item.state | default('present') }}"
   loop: "{{ homebrew_packages }}"
+
+- name: install python modules
+  pip:
+    name: "{{ item.name | default(item) }}"
+    state: "{{ item.state | default('present') }}"
+    version: "{{ item.version | default(omit) }}"
+  loop:
+    - "{{ pip_modules }}"
