--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,7 @@
     name: "{{ item.name | default(item) }}"
     state: "{{ item.state | default('present') }}"
     version: "{{ item.version | default(omit) }}"
+    extra_args: --user
   loop:
     - "{{ pip_modules }}"
 
